# viper

./: .gitignore  LICENSE  README.md  build-sqlite.sh  build.sh  test-sqlite.md
BranchForcer/: .gitignore  Makefile  afl-fuzz.c  config.h  test-instr.c
BranchForcer/llvm_mode_flip/: Makefile  afl-clang-fast-flip.c  afl-llvm-pass-flip.so.cc  afl-llvm-rt-flip.o.c
BranchForcer/llvm_mode_rate/: Makefile  afl-clang-fast-rate.c  afl-llvm-pass-rate.so.cc  afl-llvm-rt-rate.o.c
VariableRator/: CMakeLists.txt  rator.cpp  rator_arg.cpp
tools/: auto_rator.py  check.sh  copy_tools.sh  lib_func_map_gen.py  libcall  rec_ori_files.py  rename_corpus.py  rm_gen_files.py
tools/splitAfterCall/: Makefile  README.md  splitAfterCall.cpp  splitAfterCall.h
